# the-open-state

./: .gitignore  .mcp.json  AGENTS.md  CONFORMANCE.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish-kit.yml  release-mcpb.yml  tag-release.yml
docs/: 00-overview.md  01-architecture.md  m2-validation-findings.md
docs/milestones/: m1-parks-canada-local.md  m2-remote-oauth.md  m3-memory-preferences.md  m4-alberta-parks.md  m5-directory-launch.md
kit/: README.md  package.json
open-state-camping/: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
open-state-camping/docs/: parks-canada-api-findings.md
open-state-camping/infra/: README.md  deploy.sh  main.bicep
open-state-camping/scripts/: smoke-search.mjs
open-state-camping/src/open_state_camping/: __init__.py  config.py  notify.py  server.py  tls.py
open-state-camping/src/open_state_camping/alerts/: __init__.py  poller.py  store.py
open-state-camping/src/open_state_camping/providers/: __init__.py  base.py  parks_canada.py
open-state-camping/src/open_state_camping/providers/going_to_camp/: __init__.py  client.py
open-state-camping/tests/: conftest.py  test_alerts.py  test_parks_canada_provider.py  test_serving.py  test_tls.py  test_tools.py
open-state-camping/tests/fixtures/parks_canada/: availability_child.json  equipment.json  resources_min.json
scripts/: check-pii.mjs
(+6 files in other folders)
