[project]
name = "open-state-camping"
version = "0.1.0"
description = "The Open State: Camping - Civic Access Protocol reference implementation (M1, Parks Canada, local stdio MCP)"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp<3",
    "httpx>=0.28.1",
]

[project.scripts]
open-state-camping = "open_state_camping:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
